# hopefully-better-codex

./: .codespellignore  .codespellrc  .gitignore  .npmrc  .prettierignore  .prettierrc.toml  AGENTS.md  CHANGELOG.md  LICENSE  NOTICE  PNPM.md  README.md  cliff.toml  commit_msg.txt  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: dependabot.yaml  dotslash-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: 2-bug-report.yml  3-docs-issue.yml  4-feature-request.yml  5-vs-code-extension.yml
.github/workflows/: ci.yml  cla.yml  codespell.yml  rust-ci.yml  rust-release.yml
codex-cli/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
codex-cli/scripts/: README.md  build_container.sh  init_firewall.sh  (+4 more)
codex-rs/: .gitignore  Cargo.toml  README.md  clippy.toml  config.md  default.nix  justfile  rust-toolchain.toml  rustfmt.toml
codex-rs/web/: Cargo.toml
codex-rs/web/src/: lib.rs  server.rs  session.rs
codex-rs/web/static/: index.html  session.html
codex-rs/web/static - Old/: index.html  session.html
codex-rs/web/static - Old/assets/: index.css  index.js  session.css  session.js
codex-rs/web/static/assets/: index.css  index.js  session.css  session.js
docs/: CLA.md  advanced.md  authentication.md  config.md  contributing.md  experimental.md  faq.md  getting-started.md  install.md  license.md  open-source-fund.md  platform-sandboxing.md  prompts.md  release_management.md  sandbox.md  zdr.md
scripts/: asciicheck.py  publish_to_npm.py  readme_toc.py
(+419 files in other folders)
