[package]
name = "codex-web"
version = { workspace = true }
edition = "2024"

[lib]
name = "codex_web"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.9"
futures-util = "0.3"
tower-http = { version = "0.6", features = ["fs"] }

# PTY support for terminal mode (Unix only)
portable-pty = { version = "0.8", default-features = false, features = ["serde"] }

codex-common = { path = "../common", features = ["cli"] }
codex-core = { path = "../core" }
codex-protocol = { path = "../protocol" }
codex-login = { path = "../login" }
